Add missing info for Q5. Ready to grade @weiglemc.

--- a/main.tex
+++ b/main.tex
@@ -174,6 +174,10 @@ Figure \ref{fig:mds} is on page 20.
 \end{figure}
 
 \subsection*{Discussion}
+333 iterations were required.  I determined this by running the following cell in the notebook, copy-pasting the outptut into ``MDSIIterations.txt,'' and counting the number of lines.
+\begin{itemize}
+    \item coords = scaledown(data)
+\end{itemize}
 I would say the graph shown in figure \ref{fig:mds} is very accurate in its clustering. All the gaming accounts are clustered.  All of the news outlets are clustered together, as well as celebrities and political figures.  I think this plot is more accurate than the dendrogram.
 
 
